# atmosphere

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: build.yaml
assets/atmosphere/exefs_patches/es_patches/: C6EB162251D3E1F4D7D1B20A8B807860C987B08A.ips
assets/atmosphere/exefs_patches/nfim_ctest/: 22A811D739A648F3967343DAFEB7353C2EA942AB.ips
assets/atmosphere/exefs_patches/nim_ctest/: 5CFAC5752420D8B8933A9A4D83FD58AAC3CEE112.ips
assets/bootloader/: patches.ini
src/: __init__.py  builder.py  config.py  downloader.py  extractor.py  github_api.py
templates/: system_settings.ini
